--- a/config/melgan/autoregressive_config.yaml
+++ b/config/melgan/autoregressive_config.yaml
@@ -1,16 +1,16 @@
 # ARCHITECTURE
 decoder_model_dimension: 256
 encoder_model_dimension: 512
-decoder_num_heads: [4, 4, 4, 4]  # the length of this defines the number of layers
-encoder_num_heads: [4, 4, 4, 4]  # the length of this defines the number of layers
+decoder_num_heads: [2, 2, 2, 2]  # the length of this defines the number of layers
+encoder_num_heads: [2, 2, 2, 2]  # the length of this defines the number of layers
 encoder_feed_forward_dimension: 1024
 decoder_feed_forward_dimension: 1024
 decoder_prenet_dimension: 256
 encoder_prenet_dimension: 512
 encoder_attention_conv_filters: 512
 decoder_attention_conv_filters: 512
-encoder_attention_conv_kernel: 3
-decoder_attention_conv_kernel: 3
+encoder_attention_conv_kernel: 9
+decoder_attention_conv_kernel: 9
 encoder_max_position_encoding: 1000
 decoder_max_position_encoding: 10000
 postnet_conv_filters: 256
@@ -35,12 +35,9 @@ head_drop_schedule:  # head-level dropout: how many heads to set to zero at trai
   - [15_000, 1]
 reduction_factor_schedule:
   - [0, 10]
-  - [80_000, 5]
-  - [150_000, 3]
-  - [250_000, 1]
+  - [80_000, 1]
 max_steps: 900_000
-bucket_boundaries: [200, 300, 400, 500, 600, 700, 800, 900, 1000, 1200] # mel bucketing
-bucket_batch_sizes: [64, 42, 32, 25, 21, 18, 16, 14, 12, 11, 1]
+batch_size: 16
 debug: False
 
 # LOGGING
